# compute-aware-arch-search

./: .gitignore  README.md  RUNPOD_GLA_TRAINING_GUIDE.md  activation_hooks.py  benchmark.py  dataset_setup.py  distill.py  distill_kl_trick.py  distill_videet.py  download_model.py  example_use_custom_qwen3.py  hybrid_config_generator.py  layer_results.csv  linear_test.py  modal_test.py  pyproject.toml  qwen3_control_config.json  qwen3hybridconfig.json  setup.bash  test_hybrid_model.py  test_inference.py  train.py
.github/workflows/: static.yml
Qwen3-8B/: config.json
configs/: __init__.py  hybrid_config_generator.py
configs/hybrid_model_configs/: control.json  top10.json  top10_gla.json  top25.json  top50.json
configs/linear_attn_configs/: gla_config.json  rwkv7_config.json
docs/: index.html
evaluation/: __init__.py  linear_test.py  measure_throughput.py  test_generation.py  test_hybrid_model.py  test_inference.py  throughput_analysis.py  throughput_results.csv  timing_results.csv
examples/: __init__.py  example_use_custom_qwen3.py
hybrid_model_configs/: control.json  top10.json  top10_gla.json  top25.json  top50.json
jetnemotron_eval_code/: evaluation.py  meta_evaluator.py  mmlu_normal.yaml  stage1_gsm8k.sh
linear_attn/: deltaformer_config.json  gla_config.json  rwkv7_config.json  simple.py
qwen3_model/: __init__.py  modeling_qwen3.py
scripts/: setup.bash
training/: distill.py  distill_part2.py  distill_videet.py  train.py
utils/: benchmark.py  dataset_setup.py  download_model.py
wandb/: latest-run
(+341 files in other folders)
