[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.11.0",
    "datasets>=2.0.0",
    "flash-linear-attention>=0.4.0",
    "modal>=1.2.1",
    "torch>=2.9.0",
    "transformers>=4.57.1",
    "wandb>=0.23.0",
    "zstandard>=0.25.0",
]
